# wmin-model

./: README.md  ci_environment.yml  environment.yml  pyproject.toml
colibri/models/wmin/: pyproject.toml
colibri/models/wmin/wmin/: __init__.py  app.py  basis.py  completeness.py  config.py  model.py  ultranest_fit.py  utils.py  wmin_ultranest_likelihood.py
wmin/: app.py  basis.py  config.py  export_results.py  hessian2mc.py  pyproject.toml  sr_normaliser.py  ultranest_fit.py  utils.py
wmin/runcards/: basis_completeness_plots.yaml  basis_constructor.yaml  basis_constructor_pch.yaml  hessian_2mc_msht.yaml  likelihood_time.yaml  n3fit_basis_generator.yaml  pod_basis_example.yaml  shift_lhadf_members.py  shift_lhapdf_members.py  wmin_pca_basis.yaml  wmin_pca_exportgrids.yaml
wmin/runcards/wmin_fit_runcards/: wmin_analytic_dis.yaml  wmin_bayes_dis.yaml  wmin_mc_dis.yaml
wmin/tests/: test_config.py  test_export_results.py  test_fit.py  test_hessian2mc.py  test_likelihood.py  test_ultranest_fit.py  test_wmin_basis.py  test_wmin_utils.py  wmin_conftest.py
wmin/tests/regression_results/test_fit_wmin_bayes_dis_L0/: filter.yml  md5  ns_result.csv
wmin/tests/regression_results/test_fit_wmin_bayes_had_L0/: filter.yml  md5  ns_result.csv
wmin/tests/regression_runcards/: test_fit_wmin_bayes_dis_L0.yaml  test_fit_wmin_bayes_had_L0.yaml  test_fit_wmin_mc_dis_L0.yaml  test_fit_wmin_mc_had_L0.yaml  wmin_likelihood_type_test.yaml
wmin/wmin/: api.py  basis.py  utils.py
wmin/wmin/runcards/: basis_constructor.yaml
wmin/wmin/tests/: test_likelihood.py  test_wmin_utils.py
(+32 files in other folders)
